# backtest

./: Cargo.toml
.cargo/: config.toml
examples/: kplot.rs
src/: account.rs  lib.rs  main.rs  model.rs  strategy.rs
src/strategy/: k_strategy.rs  mod.rs  tick_strategy.rs
src/ui/: mod.rs
tests/: AccountTest.rs  sh600795.rs  sh601111.rs  tick_strategy_test.rs
