[package]
name = "backtest"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = {version = "0.4.41"}
serde = { version = "1.0.219", features = ["derive"] }
serde_json ={version = "1.0.140"}
csv = {version = "1.3.1"}
eframe = "0.31.1"  # egui框架
egui = "0.31.1"   # egui UI库
egui_plot = "0.32.1"  # egui绘图组件
winapi = { version = "0.3.9", features = ["winuser"] }